# backend/internal/biz/handler/comm/comm_service.go
@@ -1,0 +1,12 @@
+package comm
+
+import (
+	"github.com/wegoteam/wepkg/snowflake"
+)
+
+// GetSnowflake
+// @Description: 获取雪花算法唯一ID
+func GetSnowflake() string {
+	snowflakeId := snowflake.GetSnowflakeId()
+	return snowflakeId
+}
