# backend/internal/docs/swagger.yaml
@@ -1,4 +1,205 @@
 basePath: /
+definitions:
+  base.Page-bo_InstTaskResult:
+    properties:
+      pageNum:
+        description: 页码
+        type: integer
+      pageSize:
+        description: 每页条数
+        type: integer
+      records:
+        description: 数据
+        items:
+          $ref: '#/definitions/bo.InstTaskResult'
+        type: array
+      total:
+        description: 总条数
+        type: integer
+    type: object
+  base.Page-bo_UserTaskResult:
+    properties:
+      pageNum:
+        description: 页码
+        type: integer
+      pageSize:
+        description: 每页条数
+        type: integer
+      records:
+        description: 数据
+        items:
+          $ref: '#/definitions/bo.UserTaskResult'
+        type: array
+      total:
+        description: 总条数
+        type: integer
+    type: object
+  base.Page-bo_UserTaskTodoResult:
+    properties:
+      pageNum:
+        description: 页码
+        type: integer
+      pageSize:
+        description: 每页条数
+        type: integer
+      records:
+        description: 数据
+        items:
+          $ref: '#/definitions/bo.UserTaskTodoResult'
+        type: array
+      total:
+        description: 总条数
+        type: integer
+    type: object
+  base.Response:
+    properties:
+      code:
+        description: 0:成功，其他：失败
+        type: integer
+      data:
+        description: 数据
+      msg:
+        description: 错误信息
+        type: string
+    type: object
+  bo.InstTaskResult:
+    properties:
+      createTime:
+        description: 创建时间
+        type: string
+      createUserID:
+        description: 创建人id
+        type: string
+      createUserName:
+        description: 创建人名称
+        type: string
+      endTime:
+        description: 结束时间
+        type: string
+      formDefID:
+        description: 表单定义id
+        type: string
+      id:
+        description: 唯一id
+        type: integer
+      instTaskID:
+        description: 实例任务id
+        type: string
+      modelID:
+        description: 模板id
+        type: string
+      processDefID:
+        description: 流程定义id
+        type: string
+      remark:
+        description: 描述
+        type: string
+      startTime:
+        description: 发起时间
+        type: string
+      status:
+        description: 任务状态【1：创建中(草稿)；2：进行中； 3：终止； 4：完成； 5：挂起；6：回退】
+        type: integer
+      taskName:
+        description: 实例任务名称
+        type: string
+      updateTime:
+        description: 更新时间
+        type: string
+      updateUserID:
+        description: 更新人id
+        type: string
+      updateUserName:
+        description: 更新人名称
+        type: string
+      versionID:
+        description: 版本id
+        type: string
+    type: object
+  bo.UserTaskResult:
+    properties:
+      createUserID:
+        description: 创建人id
+        type: string
+      createUserName:
+        description: 创建人名称
+        type: string
+      endTime:
+        description: 结束时间
+        type: string
+      instStatus:
+        description: 任务状态【1：创建中(草稿)；2：进行中； 3：终止； 4：完成； 5：挂起；6：回退】
+        type: integer
+      instTaskID:
+        description: 实例任务id
+        type: string
+      nodeID:
+        description: 节点id
+        type: string
+      nodeModel:
+        description: 节点模型【1：开始节点；2：审批节点；3：办理节点；4：抄送节点；5：自定义节点；6：条件节点；7：分支节点；8：汇聚节点；9：结束节点】
+        type: integer
+      nodeName:
+        description: 节点名称
+        type: string
+      nodeTaskID:
+        description: 节点任务id
+        type: string
+      parentID:
+        description: 父节点id
+        type: string
+      startTime:
+        description: 发起时间
+        type: string
+      taskName:
+        description: 实例任务名称
+        type: string
+      userTaskID:
+        description: 处理人任务id
+        type: string
+    type: object
+  bo.UserTaskTodoResult:
+    properties:
+      createUserID:
+        description: 创建人id
+        type: string
+      createUserName:
+        description: 创建人名称
+        type: string
+      endTime:
+        description: 结束时间
+        type: string
+      instStatus:
+        description: 任务状态【1：创建中(草稿)；2：进行中； 3：终止； 4：完成； 5：挂起；6：回退】
+        type: integer
+      instTaskID:
+        description: 实例任务id
+        type: string
+      nodeID:
+        description: 节点id
+        type: string
+      nodeModel:
+        description: 节点模型【1：开始节点；2：审批节点；3：办理节点；4：抄送节点；5：自定义节点；6：条件节点；7：分支节点；8：汇聚节点；9：结束节点】
+        type: integer
+      nodeName:
+        description: 节点名称
+        type: string
+      nodeTaskID:
+        description: 节点任务id
+        type: string
+      parentID:
+        description: 父节点id
+        type: string
+      startTime:
+        description: 发起时间
+        type: string
+      taskName:
+        description: 实例任务名称
+        type: string
+      userTaskID:
+        description: 处理人任务id
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -11,6 +212,100 @@ info:
   title: weflow
   version: "1.0"
 paths:
+  /comm/snowflake:
+    get:
+      consumes:
+      - application/json
+      description: 获取雪花算法唯一ID
+      operationId: GetSnowflake
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/base.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 获取雪花算法唯一ID
+      tags:
+      - 公共
+  /insttask/initiated:
+    get:
+      consumes:
+      - application/json
+      description: 获取发起的实例任务列表（已发起）
+      parameters:
+      - description: 提交审批时间-结束
+        example: 提交审批时间
+        in: query
+        name: createTimeEnd
+        type: string
+      - description: 提交审批时间-开始 格式2021-01-28 13:14:15
+        example: 提交审批时间
+        in: query
+        name: createTimeStart
+        type: string
+      - description: 完成审批时间-结束
+        example: 完成审批时间
+        in: query
+        name: finishTimeEnd
+        type: string
+      - description: 完成审批时间-开始
+        example: 完成审批时间
+        in: query
+        name: finishTimeStart
+        type: string
+      - description: 任务状态
+        example: 1
+        in: query
+        name: instStatus
+        type: integer
+      - description: 模板ID
+        example: 模板ID
+        in: query
+        name: modelId
+        type: string
+      - description: 页码
+        example: 1
+        in: query
+        name: pageNum
+        type: integer
+      - description: 每页条数
+        example: 30
+        in: query
+        name: pageSize
+        type: integer
+      - description: 任务名称
+        example: 任务名称
+        in: query
+        name: taskName
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/base.Response'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/base.Page-bo_InstTaskResult'
+                  - properties:
+                      records:
+                        items:
+                          $ref: '#/definitions/bo.InstTaskResult'
+                        type: array
+                    type: object
+              type: object
+      summary: 获取发起的实例任务列表（已发起）
+      tags:
+      - 实例任务
   /model/list:
     get:
       consumes:
@@ -18,17 +313,263 @@ paths:
       description: 获取模板列表
       produces:
       - application/json
-      responses: {}
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/base.Response'
       summary: 获取模板列表
-  /snowflake:
+      tags:
+      - 模板
+  /model/page:
     get:
       consumes:
       - application/json
-      description: 获取雪花算法唯一ID
+      description: 分页获取模板列表
       produces:
       - application/json
-      responses: {}
-      summary: 获取雪花算法唯一ID
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/base.Response'
+      summary: 分页获取模板列表
+      tags:
+      - 模板
+  /usertask/done:
+    get:
+      consumes:
+      - application/json
+      description: 获取已办用户任务列表（已处理）
+      parameters:
+      - description: 提交审批时间-结束
+        example: 提交审批时间
+        in: query
+        name: createTimeEnd
+        type: string
+      - description: 提交审批时间-开始 格式2021-01-28 13:14:15
+        example: 提交审批时间
+        in: query
+        name: createTimeStart
+        type: string
+      - description: 创建人id
+        example: 创建人id
+        in: query
+        name: createUserId
+        type: string
+      - description: 完成审批时间-结束
+        example: 完成审批时间
+        in: query
+        name: finishTimeEnd
+        type: string
+      - description: 完成审批时间-开始
+        example: 完成审批时间
+        in: query
+        name: finishTimeStart
+        type: string
+      - description: 任务状态
+        example: 1
+        in: query
+        name: instStatus
+        type: integer
+      - description: 模板ID
+        example: 模板ID
+        in: query
+        name: modelId
+        type: string
+      - description: 页码
+        example: 1
+        in: query
+        name: pageNum
+        type: integer
+      - description: 每页条数
+        example: 30
+        in: query
+        name: pageSize
+        type: integer
+      - description: 任务名称
+        example: 任务名称
+        in: query
+        name: taskName
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/base.Response'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/base.Page-bo_UserTaskResult'
+                  - properties:
+                      records:
+                        items:
+                          $ref: '#/definitions/bo.UserTaskResult'
+                        type: array
+                    type: object
+              type: object
+      summary: 获取已办用户任务列表（已处理）
+      tags:
+      - 用户任务
+  /usertask/received:
+    get:
+      consumes:
+      - application/json
+      description: 获取用户任务列表（我收到的）
+      parameters:
+      - description: 提交审批时间-结束
+        example: 提交审批时间
+        in: query
+        name: createTimeEnd
+        type: string
+      - description: 提交审批时间-开始 格式2021-01-28 13:14:15
+        example: 提交审批时间
+        in: query
+        name: createTimeStart
+        type: string
+      - description: 创建人id
+        example: 创建人id
+        in: query
+        name: createUserId
+        type: string
+      - description: 完成审批时间-结束
+        example: 完成审批时间
+        in: query
+        name: finishTimeEnd
+        type: string
+      - description: 完成审批时间-开始
+        example: 完成审批时间
+        in: query
+        name: finishTimeStart
+        type: string
+      - description: 任务状态
+        example: 1
+        in: query
+        name: instStatus
+        type: integer
+      - description: 模板ID
+        example: 模板ID
+        in: query
+        name: modelId
+        type: string
+      - description: 页码
+        example: 1
+        in: query
+        name: pageNum
+        type: integer
+      - description: 每页条数
+        example: 30
+        in: query
+        name: pageSize
+        type: integer
+      - description: 任务名称
+        example: 任务名称
+        in: query
+        name: taskName
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/base.Response'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/base.Page-bo_UserTaskResult'
+                  - properties:
+                      records:
+                        items:
+                          $ref: '#/definitions/bo.UserTaskResult'
+                        type: array
+                    type: object
+              type: object
+      summary: 获取用户任务列表（我收到的）
+      tags:
+      - 用户任务
+  /usertask/todo:
+    get:
+      consumes:
+      - application/json
+      description: 获取待办用户任务列表（待处理）
+      parameters:
+      - description: 提交审批时间-结束
+        example: 提交审批时间
+        in: query
+        name: createTimeEnd
+        type: string
+      - description: 提交审批时间-开始 格式2021-01-28 13:14:15
+        example: 提交审批时间
+        in: query
+        name: createTimeStart
+        type: string
+      - description: 创建人id
+        example: 创建人id
+        in: query
+        name: createUserId
+        type: string
+      - description: 完成审批时间-结束
+        example: 完成审批时间
+        in: query
+        name: finishTimeEnd
+        type: string
+      - description: 完成审批时间-开始
+        example: 完成审批时间
+        in: query
+        name: finishTimeStart
+        type: string
+      - description: 任务状态
+        example: 1
+        in: query
+        name: instStatus
+        type: integer
+      - description: 模板ID
+        example: 模板ID
+        in: query
+        name: modelId
+        type: string
+      - description: 页码
+        example: 1
+        in: query
+        name: pageNum
+        type: integer
+      - description: 每页条数
+        example: 30
+        in: query
+        name: pageSize
+        type: integer
+      - description: 任务名称
+        example: 任务名称
+        in: query
+        name: taskName
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/base.Response'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/base.Page-bo_UserTaskTodoResult'
+                  - properties:
+                      records:
+                        items:
+                          $ref: '#/definitions/bo.UserTaskTodoResult'
+                        type: array
+                    type: object
+              type: object
+      summary: 获取待办用户任务列表（待处理）
+      tags:
+      - 用户任务
 schemes:
 - http
 swagger: "2.0"
